--- a/synui_nav/static/styles/custom/participant.css
+++ b/synui_nav/static/styles/custom/participant.css
@@ -1,35 +1,15 @@
-#selection {
-    position     : relative;
-    white-space  : nowrap;
-    display      : flexbox;
-    align-content: center;
-}
-
 .participant-page {
-    margin-left: 50px;
-    margin-top : 50px;
+    padding   : 0 3rem;
+    max-height: 100%;
+    height    : auto;
+    overflow-y: auto;
 }
 
-.card {
-    border-radius  : 20px;
-    height         : 170px;
-    width          : auto;
-    margin-top     : 30px;
-    object-fit     : cover;
-    display        : flexbox;
-    align-items    : center;
-    justify-content: center;
+.title {
+    margin-top   : 3rem;
+    margin-bottom: 1rem;
 }
 
-.card-img {
-    position: relative;
-    padding : 10px;
-    width   : 100%;
-    height  : auto;
-}
-
-.custom-button {
-    position: absolute;
-    right   : 0%;
-    bottom  : 0%;
+#participant-header {
+    color: #878787;
 }
