--- a/synui_nav/static/styles/custom/sidebar.css
+++ b/synui_nav/static/styles/custom/sidebar.css
@@ -1,33 +1,24 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 @import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css);
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
 
 .fa-2x {
     font-size: 2em;
 }
 
-.fa {
-    position      : relative;
-    display       : table-cell;
-    /* width         : 60px;
-    height        : 36px; */
-    width         : 4rem;
-    height        : 2rem;
-    text-align    : center;
-    vertical-align: middle;
-    /* font-size     : 25px; */
-    font-size     : 1.5rem;
+a:hover,
+a:focus {
+    text-decoration: none;
 }
 
 .main-menu {
     background        : #000000;
     border-right      : 1px solid #ffffff;
     position          : absolute;
-    top               : 4rem;/*4rem;58px;*/
-    bottom            : 0;
+    width             : 4rem;
     height            : auto;
+    top               : 4rem;
+    bottom            : 0;
     left              : 0;
-    width             : 4rem; /*60px;*/
     overflow          : hidden;
     -webkit-transition: width .1s linear;
     transition        : width .1s linear;
@@ -36,78 +27,76 @@
 }
 
 .main-menu:hover {
-    width   : 16rem;/*250px;*/
+    width   : 16rem;
     overflow: clip;
 }
 
+.main-menu .menu-logo,
+.main-menu .menu-logo .logo-content,
+.main-menu li .main-menu-item,
+.main-menu li .item-content {
+    display    : flex;
+    align-items: center;
+}
+
 /* Formatting Synergos Logo & Animations */
-.main-menu>div.menu-logo {
-    display           : flex;
-    justify-content   : center;
-    margin-top        : 1rem;/*10px;*/
-    margin-bottom     : 1rem;/*10px;*/
+.main-menu .menu-logo {
+    margin-top        : 1rem;
+    margin-bottom     : 1rem;
     -webkit-transition: all .1s linear;
     transition        : all .1s linear;
 }
 
-.menu-logo>img {
-    width             : 3.5rem;/*50px;*/
-    height            : 3.5rem;/*50px;*/
-    object-fit        : contain;
+.menu-logo .logo-content #logo {
+    width             : 4rem;
+    height            : 4rem;
+    padding           : .1rem;
     -webkit-transition: all .1s linear;
     transition        : all .1s linear;
-    position          : fixed;
 }
 
-.menu-logo>h1.menu-logo-text {
+.menu-logo .logo-content .menu-logo-text {
     visibility: hidden;
 }
 
-.menu-logo-text {
-    display: block;
+.main-menu:hover .logo-content {
+    flex-direction : column;
+    justify-content: center;
+    vertical-align : top;
+    text-align     : center;
+    margin-bottom  : 5rem;
 }
 
-.main-menu:hover>div.menu-logo {
-    vertical-align: top;
-    display       : inline-block;
-    text-align    : center;
-    /* margin-bottom : 100px; */
-    margin-bottom : 5rem;
-}
-
-.main-menu:hover>.menu-logo>img {
-    width   : 16rem;/*250px;*/
-    height  : 16rem;/*250px;*/
+.main-menu:hover .menu-logo #logo {
+    width   : 16rem;
+    height  : 16rem;
     position: relative;
 }
 
-.main-menu:hover>.menu-logo>h1.menu-logo-text {
+.main-menu:hover .menu-logo .menu-logo-text {
     color      : #ffffff;
-    font-family: arial;
+    font-family: Courier, sans-serif;
     visibility : visible;
 }
 
 
 /* Formatting Synergos Side Menu & Animations */
 .main-menu>ul {
-    margin: 1rem 0;/*7px 0;*/
+    margin: 1rem 0;
 }
 
 .main-menu li {
     position: relative;
     display : block;
-    width   : 16em;/*250px;*/
+    width   : 16em;
 }
 
 .main-menu li>a {
     position          : relative;
-    display           : table;
+    display           : flex;
     border-collapse   : collapse;
     border-spacing    : 0;
     color             : #ffffff;
-    font-family       : arial;
-    /* font-size         : 18px; */
-    font-size         : 1.2rem;
     text-decoration   : none;
     -webkit-transform : translateZ(0) scale(1, 1);
     -webkit-transition: all .1s linear;
@@ -115,37 +104,25 @@
 
 }
 
-.main-menu .nav-icon {
-    position      : relative;
-    display       : table-cell;
-    /* width         : 60px;
-    height        : 36px; */
+.main-menu li .nav-icon {
+    width         : 4rem;
+    height        : 4rem;
+    -webkit-filter: invert(1);
+    filter        : invert(1);
+    padding       : 1rem;
+}
+
+.main-menu li .fa {
     width         : 4rem;
     height        : 2rem;
     text-align    : center;
     vertical-align: middle;
-    /* font-size     : 18px; */
-    font-size     : 1.2rem;
-}
-
-.main-menu .nav-text {
-    position      : relative;
-    display       : table-cell;
-    vertical-align: middle;
-    /* width         : 190px; */
-    width         : 10rem;
-    font-family   : 'Titillium Web', sans-serif;
 }
 
 .main-menu>ul.helpline {
     position: absolute;
     left    : 0;
     bottom  : 0;
-}
-
-a:hover,
-a:focus {
-    text-decoration: none;
 }
 
 nav {
@@ -161,31 +138,42 @@ nav li {
     outline    : 0;
     margin     : 0;
     padding    : 0;
-    /* line-height: 60px; */
     line-height: 4rem;
 }
 
-nav.main-menu {
-    /* border-top-right-radius   : 25px;
-    border-bottom-right-radius: 25px; */
+/* Round edges of main menu */
+.main-menu {
     border-top-right-radius   : 1.5rem;
     border-bottom-right-radius: 1.5rem;
 }
 
-nav.main-menu:not(:hover) li.active>a {
+/* Make nav highlights smaller than nav itself */
+.main-menu li {
+    width : 14rem;
+    height: 100%;
+}
+
+/* Non-active tabs to be greyed out when sidebar is minimized */
+.main-menu:not(:hover) .menu-options li .item-content {
+    opacity: 0.4;
+    filter : alpha(opacity=40);
+}
+
+/* Highlight ONLY active tab when sidebar is minimized */
+.main-menu:not(:hover) .menu-options li.active>a {
     color           : #ffffff;
     background-color: #d87f4d;
+    width           : 14rem;
+    height          : 100%;
+
+    /* Reverse greying */
+    opacity         : 1;
+    filter          : alpha(opacity=100);
 }
 
-nav.main-menu:hover li:hover>a {
-    background-color: #d87f4d;
-    border-top-right-radius: 3rem;
+/* Highlight CURRENT active tab when sidebar is maximized */
+.main-menu:hover li:hover>a {
+    background-color          : #d87f4d;
+    border-top-right-radius   : 3rem;
     border-bottom-right-radius: 3rem;
-}
-
-@font-face {
-    font-family: 'Titillium Web';
-    font-style : normal;
-    font-weight: 300;
-    src        : local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
 }
