--- a/synui_nav/templates/orchestrator.html
+++ b/synui_nav/templates/orchestrator.html
@@ -1,130 +1,86 @@
-{% extends "base.html" %}
+{% extends "navigation.html" %}
 
 
-{% block styles %}
+{% block selection_styles %}
+<link rel="stylesheet" type="text/css" href="/static/styles/custom/cards.css">
 <link rel="stylesheet" type="text/css" href="/static/styles/custom/orchestrator.css">
 {% endblock %}
 
 
 {% block content %}
-<!-- Orchestrator Navbar -->
-<nav class="navbar fixed-top shadow-sm navbar-light" id="selection">
-    <span class="navbar-text" id="selection_back_text">
-        <a href="/home">
-            <i class="fa bi-arrow-left-short fa-2x">Home</i>
-        </a>
-    </span>
-</nav>
-
 <div class="ttp-page">
     <h1 class="title" id="ttp-title">Orchestrator Dashboard</h1>
 
     <div class="row">
 
         <!-- Collaboration Metadata Pipeline -->
-        <div class="card mb-3 border-0" id="custom-card">
-            <a href="/view/orchestrator/collaborations">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="/static/images/collaboration.svg" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Collaborations</h5>
-                            <p class="card-text">Deployment configurations</p>
-                        </div>
-                    </div>
+        <div class="container custom-card">
+            <a class="clickable-content" href="/actions/orchestrator/collaborations">
+                <img class="custom-card-img" src="/static/images/collaboration.svg">
+                <div class="custom-card-body">
+                    <h5 class="custom-card-title">Collaborations</h5>
+                    <span class="custom-card-text">Deployment configurations</span>
                 </div>
             </a>
         </div>
 
         <!-- Project Metadata Pipeline -->
-        <div class="card mb-3 border-0" id="custom-card">
-            <a href="/view/orchestrator/projects">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="/static/images/project.svg" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Projects</h5>
-                            <p class="card-text">Dataset variants</p>
-                        </div>
-                    </div>
+        <div class="container custom-card">
+            <a class="clickable-content" href="/actions/orchestrator/projects">
+                <img class="custom-card-img" src="/static/images/project.svg">
+                <div class="custom-card-body">
+                    <h5 class="custom-card-title">Projects</h5>
+                    <span class="custom-card-text">Dataset variants</span>
                 </div>
             </a>
         </div>
 
         <!-- Experiment Metadata Pipeline -->
-        <div class="card mb-3 border-0" id="custom-card">
-            <a href="/view/orchestrator/experiments">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="/static/images/experiment.svg" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Experiments</h5>
-                            <p class="card-text">Model architectures</p>
-                        </div>
-                    </div>
+        <div class="container custom-card">
+            <a class="clickable-content" href="/actions/orchestrator/experiments">
+                <img class="custom-card-img" src="/static/images/experiment.svg">
+                <div class="custom-card-body">
+                    <h5 class="custom-card-title">Experiments</h5>
+                    <span class="custom-card-text">Model architectures</span>
                 </div>
             </a>
         </div>
 
         <!-- Run Metadata Pipeline -->
-        <div class="card mb-3 border-0" id="custom-card">
-            <a href="/view/orchestrator/runs">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="/static/images/run.svg" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Runs</h5>
-                            <p class="card-text">Hyperparameter sets</p>
-                        </div>
-                    </div>
+        <div class="container custom-card">
+            <a class="clickable-content" href="/actions/orchestrator/runs">
+                <img class="custom-card-img" src="/static/images/run.svg">
+                <div class="custom-card-body">
+                    <h5 class="custom-card-title">Runs</h5>
+                    <span class="custom-card-text">Hyperparameter sets</span>
                 </div>
             </a>
         </div>
 
     </div>
 
-    <h3 class="title" id="ttp-title">Performance Actions</h3>
+    <h3 class="title" id="ttp-header">Performance Actions</h3>
 
     <div class="row">
 
         <!-- Optimization Pipeline -->
-        <div class="card mb-3 border-0" id="custom-card">
-            <a href="/view/orchestrator/optimizations">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="/static/images/optimizer.svg" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Optimize</h5>
-                            <p class="card-text">Tune your models!</p>
-                        </div>
-                    </div>
+        <div class="container custom-card">
+            <a class="clickable-content" href="/actions/orchestrator/optimizations">
+                <img class="custom-card-img" src="/static/images/optimizer.svg">
+                <div class="custom-card-body">
+                    <h5 class="custom-card-title">Optimize</h5>
+                    <span class="custom-card-text">Tune your models!</span>
                 </div>
             </a>
         </div>
 
         <!-- Analysis Pipeline -->
-        <div class="card mb-3 border-0" id="custom-card">
-            <a href="/view/orchestrator/analysis">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="/static/images/analyzer.svg" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Analyse</h5>
-                            <p class="card-text">Check your results here!</p>
-                        </div>
-                    </div>
+        <div class="container custom-card">
+            <a class="clickable-content" href="/actions/orchestrator/analytics">
+                <img class="custom-card-img" src="/static/images/analyzer.svg">
+                <div class="custom-card-body">
+                    <h5 class="custom-card-title">Analyse</h5>
+                    <span class="custom-card-text">Check your results here!</span>
                 </div>
             </a>
         </div>
