--- a/synui_nav/templates/viewport.html
+++ b/synui_nav/templates/viewport.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 
+<!-- Override breadcrumb in "actions.html" -->
 {% block action %}
 <li class="breadcrumb-item">
     <a href="/actions/{{role}}/{{resource}}"><span>Manage {{resource | capitalize}}</span></a>
