--- a/synui_nav/static/styles/custom/actions.css
+++ b/synui_nav/static/styles/custom/actions.css
@@ -1,18 +1,10 @@
+/* Overrides standard navigation to adjust breadcrumb position */
 .breadcrumb {
-    margin-bottom   : 0;
-    background-color: white;
-    padding         : 2px 15px 2px 25px !important;
-    box-shadow      : 0px 0px 10px rgb(223, 222, 222);
+    padding: 2px 15px 2px 25px !important;
 }
 
-.breadcrumb li a {
-    display    : flex;
-    align-items: center;
-    font-size  : 1.2rem;
-    color      : #000000;
-}
-
-.breadcrumb li:hover:not([class="active"]) a{
+/* Overrrides standard navigation to only emphasize not active tabs */
+.breadcrumb li:hover:not([class="active"]) a {
     color          : #d87f4d;
     font-size      : 150%;
     text-decoration: underline;
@@ -34,4 +26,3 @@
 .custom-card {
     width: 30rem;
 }
-
