--- a/synui_nav/static/styles/custom/home.css
+++ b/synui_nav/static/styles/custom/home.css
@@ -5,11 +5,29 @@
     overflow-y: auto;
 }
 
-.title, .header {
+.title,
+.header,
+.resources .carousel-nav {
     margin-top   : 3rem;
     margin-bottom: 1rem;
 }
 
 .header {
     color: #878787;
+}
+
+.resources .carousel-inner {
+    border-radius: 1rem;
+}
+
+.resources .card {
+    max-width    : 30vw;
+    border-radius: 1rem;
+    box-shadow   : 0px 0px 10px rgb(223, 222, 222);
+}
+
+.resources .card .img-fluid {
+    max-height             : 27vh;
+    border-top-left-radius : 1rem;
+    border-top-right-radius: 1rem;
 }
