--- a/synui_nav/static/styles/custom/landing.css
+++ b/synui_nav/static/styles/custom/landing.css
@@ -1,19 +1,81 @@
-html,
-body {
-    height: 100%;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body {
-    background: linear-gradient(to right, rgba(19, 19, 20, 0.52), rgba(109, 90, 5, 0.73)),
-        url('/static/images/synergos_landing_background.svg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size   : cover;
-    -o-background-size     : cover;
-    background-size        : cover;
-    display                : flex;
-    align-items            : left;
+    font-family     : 'Courier', sans-serif;
+    font-weight     : normal;
+    margin          : 0;
+    background-color: #ffffff;
+    overflow        : hidden;
 }
 
-.btn {
-    border-radius: 2rem;
+.intro-block {
+    height         : 100vh;
+    width          : 100%;
+    display        : flex;
+    justify-content: center;
+}
+
+.intro-block .intro-content {
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    margin-top     : auto;
+    margin-bottom  : auto;
+    color          : black;
+    text-decoration: none;
+}
+
+.intro-block .intro-content img {
+    height       : 13rem;
+    width        : 13rem;
+    margin       : -.5rem;
+    border-radius: 50%;
+}
+
+.intro-block .intro-content .intro-text {
+    font-size: 3rem;
+}
+
+.intro-block .intro-content .intro-title {
+    font-size: 3rem;
+}
+
+.intro-block .intro-content:hover .intro-title {
+    text-decoration: underline;
+}
+
+.intro-block .intro-content .intro-text {
+    font-size: 1rem;
+}
+
+/* .intro-block .intro-content:hover .intro-text {
+    text-decoration: underline;
+} */
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg),
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes collapse {
+    from {
+        transform: scale(1) rotate(0deg),
+    }
+
+    to {
+        transform: scale(.1, .1) rotate(360deg);
+    }
+}
+
+.intro-block .intro-content .spin {
+    animation-name           : spin;
+    animation-duration       : 10s;
+    animation-iteration-count: infinite;
+    /* linear | ease | ease-in | ease-out | ease-in-out */
+    animation-timing-function: linear;
 }
