--- a/synui_nav/templates/base.html
+++ b/synui_nav/templates/base.html
@@ -34,7 +34,7 @@
     <nav class="main-menu" id="main-menu">
         <div class="menu-logo">
             <a class="logo-content" href="/">
-                <img id="logo" src="/static/images/synergos_logo.png" alt="">
+                <img id="logo" src="/static/images/synergos_logo.svg" alt="">
                 <h1 class="menu-logo-text">Synergos</h1>
             </a>
         </div>
