--- a/synui_nav/templates/landing.html
+++ b/synui_nav/templates/landing.html
@@ -18,14 +18,12 @@
 </head>
 
 <body>
-    <div class="container">
-        <a href="/home">
-            <div class="container d-flex h-100">
-                <div class="row justify-content-center align-self-center">
-                    <h1>SYNERGOS</h1>
-                    <br>
-                    <button type="button" class="btn btn-primary btn-lg">Get Started!</button>
-                </div>
+    <div class="container-fluid intro-block">
+        <a href="/home" class="intro-content">
+            <img class="intro-logo spin" src="/static/images/synergos_logo.svg">
+            <div>
+                <h1 class="intro-title">Synergos</h1>
+                <span class="intro-text">Privacy starts here.</span>
             </div>
         </a>
     </div>
