--- a/synui_nav/templates/viewport.html
+++ b/synui_nav/templates/viewport.html
@@ -3,23 +3,38 @@
 
 {% block view_styles %}
 <link rel="stylesheet" type="text/css" href="/static/styles/custom/streamlit.css">
+
+{% block station_styles %}{% endblock %}
 {% endblock %}
 
 
 <!-- Override breadcrumb in "actions.html" -->
 {% block action %}
-<li class="breadcrumb-item">
-    <a href="/actions/{{role}}/{{resource}}"><span>Manage {{resource | capitalize}}</span></a>
-</li>
 <li class="breadcrumb-item active" aria-current="page">
-    <span>{{action | capitalize}} {{resource | capitalize}}</span>
+    <span>Manage {{resource | capitalize}}</span>
 </li>
+
+<!-- KIV for future development -->
+<!-- <li class="breadcrumb-item active" aria-current="page">
+    <span>{{action | capitalize}} {{resource | capitalize}}</span>
+</li> -->
 {% endblock %}
 
 
 {% block content %}
-<iframe src="http://localhost:8501/?r={{role}}&p={{resource}}&a={{action}}" id="streamlit-content" allowfullscreen
-    frameborder="0" wmode="transparent">
+<iframe 
+    src="http://localhost:8501/?r={{role}}&p={{resource}}&a={{action}}" 
+    id="streamlit-content" 
+    allowfullscreen
+    frameborder="0" 
+    wmode="transparent"
+>
     Your browser doesn't support iframes
 </iframe>
+
+{% block station %}{% endblock %}
+{% endblock %}
+
+
+{% block action_scripts %}
 {% endblock %}
