--- a/synui_view/static/styles/custom/st_global.css
+++ b/synui_view/static/styles/custom/st_global.css
@@ -10,17 +10,17 @@
 
 /* Adjust sidebar configurations */
 .css-17eq0hr {
-    padding-top     : 4rem;
+    padding-top     : 3.5rem;
     background-color: #f5f5f5;
     border-radius   : 1.5rem;
 }
 
 .main {
     border-radius: 1.5rem;
-    color: #000000;
+    color        : #000000;
 }
 
 /* Toggles visibility of footer */
 footer {
-    visibility: hidden;
+    visibility: none;
 }
