Stablized command station to dynamically load iframes

--- a/synui_nav/templates/home.html
+++ b/synui_nav/templates/home.html
@@ -65,13 +65,13 @@
 
                             <div class="col-md-4 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid" alt="100%x280"
-                                        src="https://images.unsplash.com/photo-1532781914607-2031eca2f00d?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=7c625ea379640da3ef2e24f20df7ce8d">
+                                    <img class="img-fluid" alt="100%x280" src="https://mk0ourmainwebsib36wt.kinstacdn.com/wp-content/uploads/2020/07/image.png">
                                     <div class="card-body">
-                                        <h4 class="card-title">Special title treatment</h4>
-                                        <p class="card-text">With supporting text below as a natural lead-in to
-                                            additional content.</p>
-
+                                        <a href="https://aisingapore.org/2020/10/ai-singapores-journey-into-the-world-of-federated-learning/?highlight=federated%20learning">
+                                            <h4 class="card-title">AI Singapore’s Journey Into the World of Federated
+                                                Learning</h4>
+                                            <p class="card-text">Why is Federated Learning needed?</p>
+                                        </a>
                                     </div>
 
                                 </div>
@@ -79,31 +79,31 @@
                             <div class="col-md-4 mb-3">
                                 <div class="card">
                                     <img class="img-fluid" alt="100%x280"
-                                        src="https://images.unsplash.com/photo-1517760444937-f6397edcbbcd?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=42b2d9ae6feb9c4ff98b9133addfb698">
+                                        src="https://media.istockphoto.com/videos/generic-vintage-stylized-broadcast-microphone-video-id1010961776?s=640x640">
                                     <div class="card-body">
-                                        <h4 class="card-title">Special title treatment</h4>
-                                        <p class="card-text">With supporting text below as a natural lead-in to
-                                            additional content.</p>
-
+                                        <a href="https://aisingapore.org/2020/10/voices-from-the-aisg-federated-lab/?highlight=federated%20learning">
+                                            <h4 class="card-title">Voices from the AISG Federated Learning Lab</h4>
+                                            <p class="card-text">What makes FL interesting?</p>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-4 mb-3">
                                 <div class="card">
                                     <img class="img-fluid" alt="100%x280"
-                                        src="https://images.unsplash.com/photo-1532712938310-34cb3982ef74?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=3d2e8a2039c06dd26db977fe6ac6186a">
+                                        src="https://mk0ourmainwebsib36wt.kinstacdn.com/wp-content/uploads/2020/10/image.png">
                                     <div class="card-body">
-                                        <h4 class="card-title">Special title treatment</h4>
-                                        <p class="card-text">With supporting text below as a natural lead-in to
-                                            additional content.</p>
-
+                                        <a href="https://aisingapore.org/2020/11/a-peek-into-synergos-ai-singapores-federated-learning-system/?highlight=federated%20learning">
+                                            <h4 class="card-title">SA Peek into Synergos – AI Singapore’s Federated Learning System</h4>
+                                            <p class="card-text">The art of working together.</p>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
 
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <!-- <div class="carousel-item">
                         <div class="row">
 
                             <div class="col-md-4 mb-3">
@@ -144,7 +144,7 @@
                                 </div>
                             </div>
 
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
