Stablized main interface branches

--- a/synui_nav/templates/home.html
+++ b/synui_nav/templates/home.html
@@ -65,11 +65,22 @@
 
                             <div class="col-md-4 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid" alt="100%x280" src="https://mk0ourmainwebsib36wt.kinstacdn.com/wp-content/uploads/2020/07/image.png">
+                                    <img class="img-fluid" alt="100%x280" src="/static/images/a1_overview_of_fl.png">
+                                    <div class="card-body">
+                                        <a href="https://aisingapore.org/2019/04/an-overview-of-federated-learning/?highlight=federated%20learning">
+                                            <h4 class="card-title">An Overview of Federated Learning</h4>
+                                            <p class="card-text">A look at its history, potential, progress, and challenges</p>
+                                        </a>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid" alt="100%x280" src="/static/images/a2_aisg_journey_into_fl.png">
                                     <div class="card-body">
                                         <a href="https://aisingapore.org/2020/10/ai-singapores-journey-into-the-world-of-federated-learning/?highlight=federated%20learning">
-                                            <h4 class="card-title">AI Singapore’s Journey Into the World of Federated
-                                                Learning</h4>
+                                            <h4 class="card-title">AI Singapore’s Journey Into the World of Federated Learning</h4>
                                             <p class="card-text">Why is Federated Learning needed?</p>
                                         </a>
                                     </div>
@@ -79,7 +90,7 @@
                             <div class="col-md-4 mb-3">
                                 <div class="card">
                                     <img class="img-fluid" alt="100%x280"
-                                        src="https://media.istockphoto.com/videos/generic-vintage-stylized-broadcast-microphone-video-id1010961776?s=640x640">
+                                        src="/static/images/a3_voices_from_aisg_fl_lab.png">
                                     <div class="card-body">
                                         <a href="https://aisingapore.org/2020/10/voices-from-the-aisg-federated-lab/?highlight=federated%20learning">
                                             <h4 class="card-title">Voices from the AISG Federated Learning Lab</h4>
@@ -88,10 +99,14 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+
                             <div class="col-md-4 mb-3">
                                 <div class="card">
-                                    <img class="img-fluid" alt="100%x280"
-                                        src="https://mk0ourmainwebsib36wt.kinstacdn.com/wp-content/uploads/2020/10/image.png">
+                                    <img class="img-fluid" alt="100%x280" src="/static/images/a4_peek_into_synergos.png">
                                     <div class="card-body">
                                         <a href="https://aisingapore.org/2020/11/a-peek-into-synergos-ai-singapores-federated-learning-system/?highlight=federated%20learning">
                                             <h4 class="card-title">SA Peek into Synergos – AI Singapore’s Federated Learning System</h4>
@@ -100,51 +115,18 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="col-md-4 mb-3">
+                                <div class="card">
+                                    <img class="img-fluid" alt="100%x280" src="/static/images/a5_do_great_things_together_fl.png">
+                                    <div class="card-body">
+                                        <a href="https://aisingapore.org/2021/01/do-great-things-together-with-federated-learning/?highlight=federated%20learning">
+                                            <h4 class="card-title">Do Great Things Together With Federated Learning</h4>
+                                            <p class="card-text">Materializing our FL dream.</p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <!-- <div class="carousel-item">
-                        <div class="row">
-
-                            <div class="col-md-4 mb-3">
-                                <div class="card">
-                                    <img class="img-fluid" alt="100%x280"
-                                        src="https://images.unsplash.com/photo-1532771098148-525cefe10c23?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=3f317c1f7a16116dec454fbc267dd8e4">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Special title treatment</h4>
-                                        <p class="card-text">With supporting text below as a natural lead-in to
-                                            additional content.</p>
-
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="col-md-4 mb-3">
-                                <div class="card">
-                                    <img class="img-fluid" alt="100%x280"
-                                        src="https://images.unsplash.com/photo-1532715088550-62f09305f765?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=ebadb044b374504ef8e81bdec4d0e840">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Special title treatment</h4>
-                                        <p class="card-text">With supporting text below as a natural lead-in to
-                                            additional content.</p>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4 mb-3">
-                                <div class="card">
-                                    <img class="img-fluid" alt="100%x280"
-                                        src="https://images.unsplash.com/photo-1506197603052-3cc9c3a201bd?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=0754ab085804ae8a3b562548e6b4aa2e">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Special title treatment</h4>
-                                        <p class="card-text">With supporting text below as a natural lead-in to
-                                            additional content.</p>
-
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div> -->
                     </div>
                 </div>
             </div>
