--- a/synui_nav/templates/viewport.html
+++ b/synui_nav/templates/viewport.html
@@ -23,7 +23,7 @@
 
 {% block content %}
 <iframe 
-    src="http://localhost:8501/?r={{role}}&p={{resource}}&a={{action}}" 
+    src="http://{{view_host}}:{{view_port}}/?r={{role}}&p={{resource}}&a={{action}}" 
     id="streamlit-content" 
     allowfullscreen
     frameborder="0" 
