--- a/synui_view/static/styles/custom/st_iframe.css
+++ b/synui_view/static/styles/custom/st_iframe.css
@@ -4,9 +4,7 @@
 }
 
 /* Full screen IFrame from SynUI-Tracker (when sidebar is expanded) */
-section[data-testid="stSidebar"][aria-expanded=true]+section.main,
-section[data-testid="stSidebar"][aria-expanded=true]+section.eknhn3m1,
-section[data-testid="stSidebar"][aria-expanded=true]+section.css-1v3fvcr {
+section[data-testid="stSidebar"][aria-expanded=true]+section.main {
     height  : 100vh !important;
     width   : calc(100vw - 21rem - 1rem) !important;
     margin  : -2.6rem 0 0 21.5rem !important;
@@ -14,9 +12,7 @@ section[data-testid="stSidebar"][aria-expanded=true]+section.css-1v3fvcr {
     position: absolute !important;
 }
 
-section[data-testid="stSidebar"][aria-expanded=true]+section>div.block-container,
-section[data-testid="stSidebar"][aria-expanded=true]+section>div.css-1y0tads,
-section[data-testid="stSidebar"][aria-expanded=true]+section>div.eknhn3m2 {
+section[data-testid="stSidebar"][aria-expanded=true]+section.main>div.block-container:first-child {
     height  : 100% !important;
     width   : 100% !important;
     padding : 0 !important;
@@ -25,9 +21,7 @@ section[data-testid="stSidebar"][aria-expanded=true]+section>div.eknhn3m2 {
 }
 
 /* Full screen IFrame from SynUI-Tracker (when sidebar is collapsed) */
-section[data-testid="stSidebar"][aria-expanded=false]+section.main,
-section[data-testid="stSidebar"][aria-expanded=false]+section.eknhn3m1,
-section[data-testid="stSidebar"][aria-expanded=false]+section.css-1v3fvcr {
+section[data-testid="stSidebar"][aria-expanded=false]+section.main {
     height  : 100vh !important;
     width   : calc(100vw - 1rem) !important;
     margin  : -2.6rem 0 0 .5rem !important;
@@ -35,9 +29,7 @@ section[data-testid="stSidebar"][aria-expanded=false]+section.css-1v3fvcr {
     position: absolute !important;
 }
 
-section[data-testid="stSidebar"][aria-expanded=false]+section>div.block-container,
-section[data-testid="stSidebar"][aria-expanded=false]+section>div.css-1y0tads,
-section[data-testid="stSidebar"][aria-expanded=false]+section>div.eknhn3m2 {
+section[data-testid="stSidebar"][aria-expanded=false]+section.main>div.block-container:first-child {
     height  : 100% !important;
     width   : 100% !important;
     padding : 0 !important;
